fix(yalb-1263): add extra-p-spacing for p elements that follow no-page-spacing

--- a/components/00-tokens/layout/_layout.scss
+++ b/components/00-tokens/layout/_layout.scss
@@ -84,8 +84,10 @@ $layout-widths: map.deep-get(tokens.$tokens, size, component-layout, width);
 // The spacing-page-inner mixin should be applied to components that are
 // "content-like." They generally accompany other components within a "section."
 @mixin spacing-page-inner {
+  --font-spacing-paragraph-extra: 2em;
+
   .no-page-spacing + & {
-    margin-top: var(--font-spacing-paragraph);
+    margin-top: var(--font-spacing-paragraph-extra);
   }
 
   &:not(.no-page-spacing) {
